--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -341,7 +341,7 @@ h2, h3 {
     padding: 3rem 1rem;
     text-align: center;
     margin-bottom: 3rem;
-    border-radius: var(--border-radius);
+    border-radius: 6px;
     gap: 2rem;
     align-items: center;
     margin: 32px;
