--- a/Frontend/CSS/appointment.css
+++ b/Frontend/CSS/appointment.css
@@ -137,6 +137,14 @@
     font-size: 1.2rem;
 }
 
+.empty-state{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
 /* Responsive adjustments */
 @media (max-width: 768px) {
     .appointments-grid {
