--- a/Frontend/CSS/profile.css
+++ b/Frontend/CSS/profile.css
@@ -102,6 +102,7 @@
     border-radius: var(--border-radius);
     padding: 24px;
     box-shadow: var(--shadow);
+    height: 474px;
 }
 
 .card-header {
