--- a/Frontend/CSS/forms.css
+++ b/Frontend/CSS/forms.css
@@ -56,6 +56,30 @@ textarea{
     resize: none;
 }
 
+/* Weight input styles */
+.weight-input {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.weight-input .form-control {
+    padding-right: 40px;
+}
+
+.weight-input .input-suffix {
+    position: absolute;
+    right: 12px;
+    color: var(--text-color);
+    pointer-events: none;
+}
+
+/* Textarea styles */
+textarea.form-control {
+    min-height: 100px;
+    resize: none;
+}
+
 /* Form styles from profile section */
 .form-group {
     margin-bottom: 20px;
