--- a/Frontend/CSS/appointment.css
+++ b/Frontend/CSS/appointment.css
@@ -97,17 +97,19 @@
 }
 
 .btn-cancel {
-    background-color: var(--red);
-    color: var(--white);
+    border-color: #e74c3c;
+    color: white;
     padding: 0.5rem 1rem;
     border: none;
     border-radius: var(--border-radius);
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: ease .2s;
+    background-color: #e74c3c;
 }
 
 .btn-cancel:hover {
-    background-color: #e74c3c;
+    background-color: #c0392b;
+    border-color: #c0392b;
 }
 
 .appointment-card.past {
