--- a/Frontend/CSS/responsive.css
+++ b/Frontend/CSS/responsive.css
@@ -66,6 +66,10 @@
         -webkit-backdrop-filter: blur(10px);
         border: 1px solid var(--border-light);
     }
+
+    nav a.active{
+        width: 200px;
+    }
     
     .mobile-nav-toggle .menu-icon,
     .mobile-nav-toggle .close-icon {
@@ -325,7 +329,7 @@
     .hero-text h1 {
         font-size: 2rem;
         line-height: 1.2;
-        background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+        background: var(--primary-color);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
@@ -554,6 +558,10 @@
         margin-right: 2rem;
         height: 320px;
         border-radius: 24px;
+    }
+
+    nav a.active{
+        width: 200px;
     }
 
     .services-grid {
