Mostrando toda la información de las mascotas de los usuarios desde empleados

--- a/Frontend/CSS/pets.css
+++ b/Frontend/CSS/pets.css
@@ -1,5 +1,9 @@
 /* Pet Cards */
 
+.medical-divider {
+    border: 0;
+}
+
 .container-top{
     display: flex;
     justify-content: space-between;
